# Clock

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
debian/: README.Debian  changelog  clock.desktop  clock.install  control  copyright  rules
debian/source/: options
res/: resources.qrc
src/mainwindow/: mainwindow.cxx
